# sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake_package_example/: CMakeLists.txt  README.md
cmake_package_example/cmake_packaging/: libexampleConfig.cmake  libexample_installation.cmake
cmake_package_example/src/: libexample.h  main.cpp
cmake_package_usage/: CMakeLists.txt  main.cpp
cpppybind/: CMakeLists.txt  example.cpp  main.py  matrix_example.cpp
cppswig/: CMakeLists.txt  example_wrap.cxx  main.py
cuda/: CMakeLists.txt
eigentest/: CMakeLists.txt  libexampleConfig.cmake  libexample_installation.cmake
eigentest/resources/: mfem.natvis
eigentest/src/: libexample.cpp
py_gmsh/: box.step  box_face.step  mesh_from_step_files.py  sphere.FCStd  sphere.step
